--- a/case-studies.html
+++ b/case-studies.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 19 2023 19:01:25 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Dec 20 2023 02:24:08 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="656539d3fe23ca7ddda57eb1" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic:devanagari,latin,latin-ext"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic","Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic:devanagari,latin,latin-ext"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
@@ -24,7 +24,7 @@
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 159px, (max-width: 991px) 21vw, 16vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 159px, (max-width: 991px) 21vw, 15vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -83,6 +83,9 @@
               <li>
                 <a href="https://yellowdogman.com/contact.html" target="_blank" class="nav-link">Contact</a>
               </li>
+              <li>
+                <a href="http://resonite.com/Resonite_PressKit_121923.zip" class="nav-link">Press Kit</a>
+              </li>
               <li class="list-item-2">
                 <a href="https://store.steampowered.com/app/2519830/Resonite/" class="button-6 w-button">Download</a>
               </li>
@@ -94,47 +97,51 @@
     </div>
   </div>
   <div class="div-block-11"></div>
-  <section class="hero-heading-left">
-    <div class="container-2">
-      <div class="hero-wrapper">
-        <div class="hero-split">
-          <h2 class="heading-6">Enterprise</h2>
-          <p class="margin-bottom-24px">Using Resonite’s vast array of development tools, you can host meetings, whiteboard sessions, and create custom training simulations for your company.</p>
-        </div>
-        <div class="hero-split"><img src="images/CaseStudies_Enterprise_01.jpg" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, 43vw" srcset="images/CaseStudies_Enterprise_01-p-500.jpg 500w, images/CaseStudies_Enterprise_01-p-800.jpg 800w, images/CaseStudies_Enterprise_01-p-1080.jpg 1080w, images/CaseStudies_Enterprise_01-p-1600.jpg 1600w, images/CaseStudies_Enterprise_01.jpg 1920w" alt="" class="shadow-two"></div>
-      </div>
-    </div>
-  </section>
-  <section class="hero-heading-right-2-copy">
-    <div class="container-2">
-      <div class="hero-wrapper-2">
-        <div class="hero-split"><img src="images/CaseStudies_Medical_01.jpg" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, 43vw" srcset="images/CaseStudies_Medical_01-p-500.jpg 500w, images/CaseStudies_Medical_01-p-800.jpg 800w, images/CaseStudies_Medical_01-p-1080.jpg 1080w, images/CaseStudies_Medical_01-p-1600.jpg 1600w, images/CaseStudies_Medical_01.jpg 1920w" alt="" class="shadow-two-3"></div>
-        <div class="hero-split">
-          <h2 class="heading-7">Medical</h2>
-          <p class="margin-bottom-24px-copy-copy">Resonite can be used to view patient data, MRI scans, 3D models and more, all there alongside other professionals and patients.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="hero-heading-right-copy">
-    <div class="container-2">
-      <div class="hero-wrapper-2">
-        <div class="hero-split"><img src="images/CaseStudies_Education_01.jpg" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, 43vw" srcset="images/CaseStudies_Education_01-p-500.jpg 500w, images/CaseStudies_Education_01-p-800.jpg 800w, images/CaseStudies_Education_01-p-1080.jpg 1080w, images/CaseStudies_Education_01-p-1600.jpg 1600w, images/CaseStudies_Education_01-p-2000.jpg 2000w, images/CaseStudies_Education_01.jpg 2560w" alt="" class="shadow-two-3"></div>
-        <div class="hero-split">
-          <h2 class="heading-8">Education</h2>
-          <p class="margin-bottom-24px">Resonite can be used in the classroom environment. Anyone can create custom teaching module experiences. Experience the surface of other celestial bodies through 3D scanned imagery, learn to identify coral reef health, maybe even teach a course in visual scripting via Protoflux.</p>
-        </div>
-      </div>
-    </div>
-  </section>
   <section class="hero-heading-left-copy-copy">
     <div class="container-2">
       <div class="hero-wrapper">
         <div class="hero-split">
           <h2 class="heading-9">Live Production</h2>
           <p class="paragraph-2">Resonite’s technology makes it not just easy to stream live content, but also gives the ability to create versatile and interactive productions. Tweak your stage on the fly, have a team off camera control lighting and cameras, pipe in audience chat commands to trigger events in your session. The possibilities are endless!</p>
+          <a href="case-studies/live-production.html" class="button-primary w-button">Learn More</a>
         </div>
-        <div class="hero-split"><img src="images/CaseStudies_LiveProduction_01_.png" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 589px) 95vw, (max-width: 767px) 560px, (max-width: 991px) 73vw, 43vw" srcset="images/CaseStudies_LiveProduction_01_-p-500.png 500w, images/CaseStudies_LiveProduction_01_.png 560w" alt="" class="shadow-two"></div>
+        <div class="hero-split"><img src="images/The-6th-Annual-VR-Awards.jpg" loading="lazy" sizes="100vw" srcset="images/The-6th-Annual-VR-Awards.jpg 500w, images/The-6th-Annual-VR-Awards.jpg 800w, images/The-6th-Annual-VR-Awards.jpg 1080w, images/The-6th-Annual-VR-Awards.jpg 1600w, images/The-6th-Annual-VR-Awards.jpg 2000w, images/The-6th-Annual-VR-Awards.jpg 2048w" alt="" class="shadow-two"></div>
+      </div>
+    </div>
+  </section>
+  <section class="hero-heading-right-copy">
+    <div class="container-2">
+      <div class="hero-wrapper-2">
+        <div class="hero-split"><img src="images/CaseStudies_Education_01.jpg" loading="lazy" sizes="100vw" srcset="images/CaseStudies_Education_01-p-500.jpg 500w, images/CaseStudies_Education_01-p-800.jpg 800w, images/CaseStudies_Education_01-p-1080.jpg 1080w, images/CaseStudies_Education_01-p-1600.jpg 1600w, images/CaseStudies_Education_01-p-2000.jpg 2000w, images/CaseStudies_Education_01.jpg 2560w" alt="" class="shadow-two-3"></div>
+        <div class="hero-split">
+          <h2 class="heading-8">Education</h2>
+          <p class="margin-bottom-24px">Resonite can be used in the classroom environment. Anyone can create custom teaching module experiences. Experience the surface of other celestial bodies through 3D scanned imagery, learn to identify coral reef health, maybe even teach a course in visual scripting via Protoflux.</p>
+          <a data-w-id="f32a27a4-3225-6a7e-6494-17ca89401a8a" style="opacity:0" href="https://resonite.com/404.html" class="button-primary-copy-under-construction w-button">Coming Soon</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="hero-heading-right-2-copy">
+    <div class="container-2">
+      <div class="hero-wrapper-2">
+        <div class="hero-split"><img src="images/CaseStudies_Medical_01.jpg" loading="lazy" sizes="(max-width: 767px) 94vw, (max-width: 991px) 92vw, 43vw" srcset="images/CaseStudies_Medical_01-p-500.jpg 500w, images/CaseStudies_Medical_01-p-800.jpg 800w, images/CaseStudies_Medical_01-p-1080.jpg 1080w, images/CaseStudies_Medical_01-p-1600.jpg 1600w, images/CaseStudies_Medical_01.jpg 1920w" alt="" class="shadow-two-3"></div>
+        <div class="hero-split">
+          <h2 class="heading-7">Medical</h2>
+          <p class="margin-bottom-24px-copy-copy">Resonite can be used to view patient data, MRI scans, 3D models and more, all there alongside other professionals and patients.</p>
+          <a data-w-id="35f79638-0fa0-5421-d81a-b24e7e6a52c0" style="opacity:0" href="https://resonite.com/404.html" class="button-primary-copy-under-construction-copy w-button">Coming Soon</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="hero-heading-left">
+    <div class="container-2">
+      <div class="hero-wrapper">
+        <div class="hero-split">
+          <h2 class="heading-6">Enterprise</h2>
+          <p class="margin-bottom-24px">Using Resonite’s vast array of development tools, you can host meetings, whiteboard sessions, and create custom training simulations for your company.</p>
+          <a data-w-id="e3e67ae2-17fa-e6b0-bfe6-8c65df978991" style="opacity:0" href="https://resonite.com/404.html" class="button-primary-copy-under-construction w-button">Coming Soon</a>
+        </div>
+        <div class="hero-split"><img src="images/CaseStudies_Enterprise_01.jpg" loading="lazy" sizes="(max-width: 767px) 94vw, (max-width: 991px) 92vw, 43vw" srcset="images/CaseStudies_Enterprise_01-p-500.jpg 500w, images/CaseStudies_Enterprise_01-p-800.jpg 800w, images/CaseStudies_Enterprise_01-p-1080.jpg 1080w, images/CaseStudies_Enterprise_01-p-1600.jpg 1600w, images/CaseStudies_Enterprise_01.jpg 1920w" alt="" class="shadow-two"></div>
       </div>
     </div>
   </section>
