--- a/featured.html
+++ b/featured.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 19 2023 19:01:25 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Dec 20 2023 02:24:08 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="657a16505a73f376fa530bc7" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic:devanagari,latin,latin-ext"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic","Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic:devanagari,latin,latin-ext"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
@@ -24,7 +24,7 @@
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 158.99305725097656px, (max-width: 991px) 21vw, 16vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 159px, (max-width: 991px) 21vw, 15vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -42,7 +42,7 @@
                   <nav class="nav-dropdown-list shadow-three mobile-shadow-hide w-dropdown-list">
                     <a href="features.html" class="nav-dropdown-link w-dropdown-link">Features</a>
                     <a href="case-studies.html" class="nav-dropdown-link w-dropdown-link">Case Studies</a>
-                    <a href="https://resonite.com/policies/" class="nav-dropdown-link w-dropdown-link">Policies</a>
+                    <a href="https://resonite.com/policies/" target="_blank" class="nav-dropdown-link w-dropdown-link">Policies</a>
                   </nav>
                 </div>
               </li>
@@ -56,7 +56,7 @@
                     <div class="text-block-2">Socials</div>
                   </div>
                   <nav class="nav-dropdown-list shadow-three mobile-shadow-hide w-dropdown-list">
-                    <a href="https://discord.gg/Jm4nsEGq" class="nav-dropdown-link w-dropdown-link">Discord</a>
+                    <a href="http://discord.gg/resonite" target="_blank" class="nav-dropdown-link w-dropdown-link">Discord</a>
                     <a href="https://www.twitch.tv/resoniteapp" target="_blank" class="nav-dropdown-link w-dropdown-link">Twitch</a>
                     <a href="https://twitter.com/ResoniteApp?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank" class="nav-dropdown-link w-dropdown-link">Twitter</a>
                     <a href="https://www.youtube.com/@resoniteapp" target="_blank" class="nav-dropdown-link w-dropdown-link">YouTube</a>
@@ -82,6 +82,9 @@
               </li>
               <li>
                 <a href="https://yellowdogman.com/contact.html" target="_blank" class="nav-link">Contact</a>
+              </li>
+              <li>
+                <a href="http://resonite.com/Resonite_PressKit_121923.zip" class="nav-link">Press Kit</a>
               </li>
               <li class="list-item-2">
                 <a href="https://store.steampowered.com/app/2519830/Resonite/" class="button-6 w-button">Download</a>
