--- a/features.html
+++ b/features.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 19 2023 19:01:25 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Dec 20 2023 02:24:08 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6565266954e064f8c40d89ac" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic:devanagari,latin,latin-ext"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic","Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic:devanagari,latin,latin-ext"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
@@ -24,7 +24,7 @@
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 159px, (max-width: 991px) 21vw, 16vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 159px, (max-width: 991px) 21vw, 15vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -83,6 +83,9 @@
               <li>
                 <a href="https://yellowdogman.com/contact.html" target="_blank" class="nav-link">Contact</a>
               </li>
+              <li>
+                <a href="http://resonite.com/Resonite_PressKit_121923.zip" class="nav-link">Press Kit</a>
+              </li>
               <li class="list-item-2">
                 <a href="https://store.steampowered.com/app/2519830/Resonite/" class="button-6 w-button">Download</a>
               </li>
@@ -109,6 +112,7 @@
         <div class="hero-split">
           <h2 class="heading-3">Collaborative Creation Tools</h2>
           <p class="margin-bottom-24px">Resonite provides users an array of development tools that can be used alongside others in your session! Create custom avatars, interactive props, worlds, experiences, and much more! (While possible, we typically advise against deleting all of existence.)</p>
+          <a data-w-id="6e1a2e36-b7b7-56ad-bfc8-d49eb7d87332" style="opacity:0" href="https://resonite.com/404.html" class="button-primary-copy-under-construction w-button">Coming Soon</a>
         </div>
         <div class="hero-split"><img src="images/Features_CollaborativeCreationTools_01.jpg" loading="lazy" sizes="100vw" srcset="images/Features_CollaborativeCreationTools_01-p-500.jpg 500w, images/Features_CollaborativeCreationTools_01-p-800.jpg 800w, images/Features_CollaborativeCreationTools_01-p-1080.jpg 1080w, images/Features_CollaborativeCreationTools_01-p-1600.jpg 1600w, images/Features_CollaborativeCreationTools_01-p-2000.jpg 2000w, images/Features_CollaborativeCreationTools_01.jpg 2560w" alt="" class="shadow-two"></div>
       </div>
@@ -130,6 +134,7 @@
         <div class="hero-split">
           <h2 class="heading-4">Visual Scripting</h2>
           <p class="margin-bottom-24px-copy">ProtoFlux is the crown jewel of our creative tools - the most powerful visual programming language that our experienced team has designed to date, which lets you quickly prototype and build anything from simple interactions to complex games and systems - with full real-time collaboration support and immediate feedback. Build anything from avatar and world interactivity, to complex systems, and games.</p>
+          <a data-w-id="4768723e-85b6-9252-881c-c778159a7145" style="opacity:0" href="https://resonite.com/404.html" class="button-primary-copy-under-construction w-button">Coming Soon</a>
         </div>
       </div>
     </div>
@@ -152,6 +157,7 @@
         <div class="hero-split">
           <h2 class="heading-4">Content Sharing</h2>
           <p class="margin-bottom-24px-copy">Browse your own and others content! Save others (with proper permissions) and your own creations. Upload files directly from your local files into a session, view and modify it with others!</p>
+          <a data-w-id="b3e636e8-ffcb-28f8-7c5a-5e35cf74c5ea" style="opacity:0" href="https://resonite.com/404.html" class="button-primary-copy-under-construction w-button">Coming Soon</a>
         </div>
       </div>
     </div>
@@ -171,6 +177,7 @@
         <div class="hero-split">
           <h2 class="heading-5">Interactive Custom Avatars</h2>
           <p class="margin-bottom-24px">Resonite allows you to share, build, and collect interactive custom avatars! (Legs included.)</p>
+          <a data-w-id="24bc94ad-e60b-4c67-4cd0-13a1a103e402" style="opacity:0" href="https://resonite.com/404.html" class="button-primary-copy-under-construction w-button">Coming Soon</a>
         </div>
         <div class="hero-split"><img src="images/2023-11-10-00.56.08.jpg" loading="lazy" sizes="100vw" srcset="images/2023-11-10-00.56.08-p-500.jpg 500w, images/2023-11-10-00.56.08-p-800.jpg 800w, images/2023-11-10-00.56.08-p-1080.jpg 1080w, images/2023-11-10-00.56.08-p-1600.jpg 1600w, images/2023-11-10-00.56.08-p-2000.jpg 2000w, images/2023-11-10-00.56.08-p-2600.jpg 2600w, images/2023-11-10-00.56.08-p-3200.jpg 3200w, images/2023-11-10-00.56.08.jpg 3840w" alt="" class="shadow-two"></div>
       </div>
